src/objects/Address__c.object
<CustomObject>
    <description>Used to store and track addresses related to an account coming from back end systems, mainly ERPs</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account the addresses belong to - e..g the account in ERP where you can find the addresses</description>
        <inlineHelpText>The Account the addresses belong to - e..g the account in ERP where you can find the addresses</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CIMId__c</fullName>
        <label>CIM Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CombinedFields__c</fullName>
        <formula>Name&amp;&quot; | &quot;&amp;Street__c&amp;&quot; |  &quot;&amp;PostalCode__c&amp;&quot; | &quot;&amp;City__c&amp;&quot; | &quot;&amp;PracticeSiteId__c&amp;IF( Stopped__c = True, &quot;  [STOPPED]&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <description>Company Code or other relevant source system description</description>
        <inlineHelpText>Company Code or other relevant source system description</inlineHelpText>
        <label>CompanyCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerMasterUniqueKey__c</fullName>
        <description>The GDW unique key for the Customer Master (Account)</description>
        <inlineHelpText>The GDW unique key for the Customer Master (Account)</inlineHelpText>
        <label>Customer Master Unique Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <description>The customer number identifier - e.g. ERP number in ERP</description>
        <inlineHelpText>The customer number identifier - e.g. ERP number in ERP</inlineHelpText>
        <label>Customer Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GLAMId__c</fullName>
        <label>GLAM Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GdwUniqueKey__c</fullName>
        <description>GDW Unique Key for the address</description>
        <externalId>true</externalId>
        <inlineHelpText>GDW Unique Key for the address</inlineHelpText>
        <label>GDW Unique Key</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <description>The location code/Id that represents the specific address/location on the account</description>
        <inlineHelpText>The location code/Id that represents the specific address/location on the account</inlineHelpText>
        <label>Location Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PracticeHRID__c</fullName>
        <description>Practice HRID for SureSmile - usually located on the Account/CustomerMaster but in certain occasions especially with DSOs/Dental Chains it may reside here on the address level.</description>
        <inlineHelpText>Practice HRID for SureSmile - usually located on the Account/CustomerMaster but in certain occasions especially with DSOs/Dental Chains it may reside here on the address level.</inlineHelpText>
        <label>Practice HRID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PracticeId__c</fullName>
        <description>PracticeId for SureSmile - usually located on the Account/CustomerMaster but in certain occasions especially with DSOs/Dental Chains it may reside here on the address level.</description>
        <inlineHelpText>PracticeId for SureSmile - usually located on the Account/CustomerMaster but in certain occasions especially with DSOs/Dental Chains it may reside here on the address level.</inlineHelpText>
        <label>Practice Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PracticeSiteId__c</fullName>
        <description>Site Id identifying the specific location/site for SureSmile</description>
        <inlineHelpText>Site Id identifying the specific location/site for SureSmile</inlineHelpText>
        <label>Practice Site Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesGroupCode__c</fullName>
        <label>Sales Group Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesGroup__c</fullName>
        <label>Sales Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <description>SourceId of the system the address comes from</description>
        <inlineHelpText>SourceId of the system the address comes from</inlineHelpText>
        <label>SourceId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stopped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuresmileAdvancedPlatform__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Advanced</description>
        <inlineHelpText>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Advanced</inlineHelpText>
        <label>Suresmile Advanced Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SuresmileAlignerPlatform__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Aligner</description>
        <inlineHelpText>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Aligner</inlineHelpText>
        <label>Suresmile Aligner Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SuresmileOrthoPlatform__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Ortho</description>
        <inlineHelpText>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Ortho</inlineHelpText>
        <label>Suresmile Ortho Platform</label>
        <type>Checkbox</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>